tree-sitter-qsp/test/corpus/code_blocks.txt
================
Code block in expression
================
# test
dynamic {
  x = 1
  pl x
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Code block assigned to variable
================
# test
$code = { pl 'hello' }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (assignment_statement
        variables: (variable_list
          (variable_ref
            prefix: (type_prefix)
            name: (identifier_text)))
        operator: (assignment_operator)
        value: (code_block
          (block_body))))
    (location_end)))

================
Code block with statement separator
================
# test
dynamic { x = 1 & pl x }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Multiline code block
================
# test
$code = {
  x = 1
  pl x
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (assignment_statement
        variables: (variable_list
          (variable_ref
            prefix: (type_prefix)
            name: (identifier_text)))
        operator: (assignment_operator)
        value: (code_block
          (block_body))))
    (location_end)))

================
Multiline code block with continuation statement
================
# test
$s = {
  x = 1
  pl x
} & pl 'done'
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (assignment_statement
        variables: (variable_list
          (variable_ref
            prefix: (type_prefix)
            name: (identifier_text)))
        operator: (assignment_operator)
        value: (code_block
          (block_body)))
      (statement
        name: (statement_name)
        (string
          (single_quoted_string))))
    (location_end)))

================
Nested code block in dynamic
================
# test
dynamic {
  dynamic {
    pl 'inner'
  }
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Code block assigned inside code block
================
# test
$code = {
  $inner = {
    pl 'hello'
  }
  dynamic $inner
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (assignment_statement
        variables: (variable_list
          (variable_ref
            prefix: (type_prefix)
            name: (identifier_text)))
        operator: (assignment_operator)
        value: (code_block
          (block_body))))
    (location_end)))

================
Three levels deep nested code blocks
================
# test
dynamic {
  dynamic {
    dynamic {
      pl 'deep'
    }
  }
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Nested code blocks on single line
================
# test
dynamic { dynamic { pl 'inner' } }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Code block in if inside code block
================
# test
dynamic {
  if x > 0: dynamic { pl x }
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Nested block with statement separator
================
# test
dynamic { x = 1 & dynamic { pl x } }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Nested code block in multiline with mixed content
================
# test
$code = {
  x = 1
  dynamic {
    y = 2
    pl x + y
  }
  pl 'done'
}
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (assignment_statement
        variables: (variable_list
          (variable_ref
            prefix: (type_prefix)
            name: (identifier_text)))
        operator: (assignment_operator)
        value: (code_block
          (block_body))))
    (location_end)))

================
Empty code block
================
# test
dynamic { }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Code block with a bare string
================
# test
dynamic { 'hello' }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Code block with a string containing braces
================
# test
dynamic { 'text {with} braces' }
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (statement
        name: (statement_name)
        (code_block
          (block_body))))
    (location_end)))

================
Code block holding a word list
================
# test
local $list = {
  apple, pear,
  plum, cherry,
}
scanstr '$names', $list, '[\w-]+'
--
---

(source_file
  (location_block
    (location_header
      (location_name))
    (single_line_block
      (local_statement
        keyword: (local_keyword)
        variables: (variable_list
          (variable_ref
            prefix: (type_prefix)
            name: (identifier_text)))
        value: (code_block
          (block_body))))
    (single_line_block
      (statement
        name: (statement_name)
        (string
          (single_quoted_string))
        (variable_ref
          prefix: (type_prefix)
          name: (identifier_text))
        (string
          (single_quoted_string))))
    (location_end)))
